grammar.bnf
<expr> ::= <sum>

<numbers> ::= <09> <numbers> | <09>
<09> ::= "0" | <19>
<dp> ::= <19> | "%" | <19> <numbers>
<19> ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<factor> ::= <power> | "-" <power>
<power> ::= <atom> | <atom> "**" <factor>
<term> ::= <factor> | <factor> <times> <factor>
<times> ::= "*" | "/" | "//" | "mod"

<sum>  ::= <term> | <term> <plusmin> <term>
<plusmin> ::= "+" | "-"

<atom> ::= "(" <sum> ")" | <numbers> | <dice>

<dice> ::= <roll> | <roll> <suffix> | <roll> <suffix> <numbers>
<suffix> ::= "h" | "l" | "dh" | "dl" | "kh" | "kl"
<roll> ::= "d" | <diceleft> "d" | "d" <diceright> | <diceleft> "d" <diceright>

<diceleft> ::= <numbers> | "(" <sum> ")"
<diceright> ::= <dp> | "(" <sum> ")"
